[package]
name = "sec_net_engine"
authors     = ["Deandre Williams"]
description = "CIC-IDS2018 × Spectral Graph + HNSW ANN security engine"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
keywords    = ["security", "ids", "spectral-graph", "anomaly-detection", "hnsw"]

[dependencies]

# Async runtime
tokio = { version = "1.52.3", features = ["full"] }

# Serialisation
serde = { version = "1.0.228", features = ["derive"] }
serde_json =  "1.0.150"



# Burn ML (NdArray CPU backend)
burn = { version ="0.21.0", features =  ["ndarray","autodiff"]}


# Vector DB
qdrant-client = "1.18.0"


# Structured error handling
thiserror = "2.0.18"
anyhow = "1.0.102"

 
# Logging
tracing = "0.1.44"
tracing-subscriber = { version ="0.3.23", features = ["env-filter"] }


# Logging / tracing
clap        = { version = "4.6.1", features = ["derive"] }
env_logger  = "0.11.10"
log = "0.4.33"


# ANN / HNSW
hnsw_rs = "0.3.4"
anndists = "0.1.5"
burn-ndarray = "0.21.0"



[profile.release]
opt-level   = 3
lto         = true
codegen-units = 1